assets/css/main.css
@import url(fontawesome-all.min.css);
@import "auto.css";

@font-face {
	font-family: 'Source Sans Pro';
	src: url('../x86fonts/SourceSansPro-Regular.ttf') format('truetype');
	font-weight: 400;
	font-style: normal;
}

@font-face {
	font-family: 'Source Sans Pro';
	src: url('../x86fonts/SourceSansPro-Bold.ttf') format('truetype');
	font-weight: 700;
	font-style: normal;
}
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 400;
	src: url('../x86fonts/Raleway-Regular.ttf') format('truetype');
}

@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 800;
	src: url('../x86fonts/Raleway-ExtraBold.ttf') format('truetype');
}

@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 900;
	src: url('../x86fonts/Raleway-Black.ttf') format('truetype');
}
/*
	Future Imperfect by HTML5 UP
	html5up.net | @ajlkn
	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
*/

html, body, div, span, applet, object,
iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, a, abbr, acronym, address, big, cite,
code, del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, b,
u, i, center, dl, dt, dd, ol, ul, li, fieldset,
form, label, legend, table, caption, tbody,
tfoot, thead, tr, th, td, article, aside,
canvas, details, embed, figure, figcaption,
footer, header, hgroup, menu, nav, output, ruby,
section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font: inherit;
	vertical-align: baseline;
	/*overflow-x: clip;*/ /* this is killing ul & ol lists */
	opacity: 1;
}


span, applet, object,
iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
pre, abbr, acronym, address, big, cite,
code, del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, b,
u, i, center, dl, dt, dd, ol, fieldset,
form, label, legend, table, caption, tbody,
tfoot, thead, tr, th, td, article, aside,
canvas, details, embed, figure, figcaption,
footer, hgroup, menu, output, ruby,
section, summary, time, mark, audio, video {
	max-width: 50em;
}

article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}

p {
	line-height: 1.25;
}

ol, ul {
	list-style: none;
}

blockquote, q {
	quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	-webkit-text-size-adjust: none;
}

mark {
	background-color: transparent;
	color: inherit;
}

input::-moz-focus-inner {
	border: 0;
	padding: 0;
}

input, input:-webkit-autofill, select, textarea {
	-moz-appearance: none;
	-webkit-appearance: none;
	-ms-appearance: none;
	appearance: none;
}

/* Basic */

@-ms-viewport {
	/*noinspection CssInvalidPropertyValue*/
	width: device-width;
}

body {
	-ms-overflow-style: scrollbar;
}

@media screen and (max-width: 480px) {

	html, body {
		min-width: 320px;
	}

}

html {
	box-sizing: border-box;
}

*, *:before, *:after {
	box-sizing: inherit;
}

body {
	background: var(--body-back);
}

body.is-preload *, body.is-preload *:before, body.is-preload *:after {
	-moz-animation: none !important;
	-webkit-animation: none !important;
	-ms-animation: none !important;
	animation: none !important;
	-moz-transition: none !important;
	-webkit-transition: none !important;
	-ms-transition: none !important;
	transition: none !important;
}

/* Type */

input:-webkit-autofill {
	-webkit-text-fill-color: var(--body-color) !important;
}

body, input, select, textarea {
	color: var(--body-color);
	font-family: "Source Sans Pro", Helvetica, sans-serif;
	font-size: 14pt;
	/*font-weight: 400;
    line-height: 1.75;*/
}

@media screen and (max-width: 1680px) {

	body, input, input:-webkit-autofill, select, textarea {
		font-size: 12pt;
	}

}

@media screen and (max-width: 1280px) {

	body, input, input:-webkit-autofill, select, textarea {
		font-size: 12pt;
	}

}

@media screen and (max-width: 980px) {

	body, input, input:-webkit-autofill, select, textarea {
		font-size: 12pt;
	}

}

@media screen and (max-width: 736px) {

	body, input, input:-webkit-autofill, select, textarea {
		font-size: 12pt;
	}

}

@media screen and (max-width: 480px) {

	body, input, input:-webkit-autofill, select, textarea {
		font-size: 12pt;
	}

}

a {
	-moz-transition: color 0.5s ease, border-bottom-color 0.5s ease;
	-webkit-transition: color 0.5s ease, border-bottom-color 0.5s ease;
	-ms-transition: color 0.5s ease, border-bottom-color 0.5s ease;
	transition: color 0.5s ease, border-bottom-color 0.5s ease;
	border-bottom: dotted 1px var(--a-border);
	color: inherit;
	text-decoration: none;
}
/*
a:before {
	-moz-transition: color 0.5s ease;
	-webkit-transition: color 0.5s ease;
	-ms-transition: color 0.5s ease;
	transition: color 0.5s ease;
}

a:hover {
	border-bottom-color: transparent;
	color: var(--hover-color) !important;
}

a:hover:before {
	color: var(--hover-color) !important;
}
*/
strong, b {
	color: var(--strong-color);
	font-weight: 700;
}

em, i {
	font-style: italic;
}

p {
	margin: 0 0 2em 0;
	text-align: justify;
	hyphens: auto;
	word-wrap: break-word;

}

h1, h2 {
	/*text-transform: uppercase;*/
}

h1, h2, h3, h4, h5, h6 {
	color: var(--h1-6-color);
	font-family: "Raleway", Helvetica, sans-serif;
	font-weight: 800;
	letter-spacing: 0.125em;
	line-height: 1.65;
	margin: 0 0 1em 0;
	text-align: left;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
	color: inherit;
	border-bottom: 0;
}

h1 {
	font-size: 1.8em;
}

h2 {
	font-size: 1.2em;
}

h3 {
	font-size: 0.9em;
}

h4 {
	font-size: 0.7em;
}

h5 {
	font-size: 0.7em;
}

h6 {
	font-size: 0.7em;
}

sub {
	font-size: 0.8em;
	position: relative;
	top: 0.5em;
}

sup {
	font-size: 0.8em;
	position: relative;
	top: -0.5em;
}

blockquote {
	border-left: solid 4px var(--generic-back-border);
	font-style: italic;
	margin: 0 0 2em 0;
	padding: 0.5em 0 0.5em 2em;
}
/* ... */

